--- a/Tarea4/index4.html
+++ b/Tarea4/index4.html
@@ -12,14 +12,14 @@
     <ol>
         <li>10</li>
         <li>20</li>
-        <li>30</li>
+        <li>10</li>
         <li>40</li>
         <li>50</li>
     </ol>
-    <em id="promedio"></em>
-    <em id="minimo"></em>
-    <em id="maximo"></em>
-    <em id="frecuente"></em>
+    <p>El promedio es <em id="promedio"></em></p>
+    <p>El numero mas pequeño es <em id="minimo"></em></p>
+    <p>El numero mas grande es <em id="maximo"></em></p>
+    <p>El numero mas frecuente es <em id="frecuente"></em></p>
 
     <script src='main4.js'></script>
 </body>
